--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run signUpDOBError test
-        run: npm run test:signUpTermsError
+      # Install xvfb and run tests in virtual display
+      - name: Install xvfb
+        run: sudo apt-get install -y xvfb
 
+      - name: Run tests with xvfb
+        run: xvfb-run npm run test:signUpTermsError
