--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
 
       # Upload the reports as artifacts
       - name: Upload Test Reports as Artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@latest
         with:
           name: test-reports
           path: reports/
