Update test.yml branch to reporting set up

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Run Playwright with Cucumber Tests
 on:
   push:
     branches:
-      - master
+      - reporting-setup
   pull_request:
 
 jobs:
