--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "playwright": "^1.20.0"
   },
   "dependencies": {
-    "@playwright/test": "^1.49.1"
+    "@playwright/test": "^1.49.1",
+    "axios": "^1.6.0",           
+    "dayjs": "^1.11.10" 
   }
 }
