Update checkly-report.yml - Added account ID variable

--- a/.github/workflows/checkly-report.yml
+++ b/.github/workflows/checkly-report.yml
@@ -25,4 +25,5 @@ jobs:
         run: node daily-checkly-report.js
         env:
           CHECKLY_API_KEY: ${{ secrets.CHECKLY_API_KEY }}
+          CHECKLY_ACCOUNT_ID: ${{ secrets.CHECKLY_ACCOUNT_ID }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
